# rsomics-fastq-umi

./: Cargo.toml  README.md
benches/: bench.rs  fastq_umi.rs
src/: cli.rs  extract.rs  index.rs  lib.rs  main.rs  parallel_gz.rs  pipeline.rs  umi_loc.rs
tests/: compat.rs  golden.rs
tests/golden/: pe_index.fastq.r1  pe_index.fastq.r2  pe_umi.fastq.r1  pe_umi.fastq.r2  pe_umi_index2.r1  pe_umi_index2.r2  pe_umi_per_index.r1  pe_umi_per_index.r2  pe_umi_per_read_len6.r1  pe_umi_per_read_len6.r2  pe_umi_read1_len8.r1  pe_umi_read1_len8.r2  se_umi.fastq  se_umi_empty.fastq  se_umi_short.fastq
