[package]
name = "rsomics-fastq-umi"
version = "0.2.0"
description = "FASTQ inline-UMI extract + stamp. Rust port of fastp's UMI processing — full --umi_loc set (read1/read2/index1/index2/per_index/per_read): move the UMI into the read name. SE and PE."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "umi", "fastp", "preprocessing"]

[[bin]]
name = "rsomics-fastq-umi"
path = "src/main.rs"

[lib]
name = "rsomics_fastq_umi"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-fqgz = { path = "../../../foundation/rsomics-fqgz", version = "0.1" }
rsomics-seqio = { path = "../../../foundation/rsomics-seqio", version = "0.1" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
rayon.workspace = true
flate2.workspace = true
libdeflater = "1"

[dev-dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5", features = ["test-support", "rayon"] }
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "fastq_umi"
harness = false

[lints]
workspace = true
