[package]
name = "rsomics-fastq-umi"
version = "0.2.0"
description = "FASTQ inline-UMI extract + stamp. Rust port of fastp's UMI processing — full --umi_loc set (read1/read2/index1/index2/per_index/per_read): move the UMI into the read name. SE and PE."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "umi", "fastp", "preprocessing"]

[[bin]]
name = "rsomics-fastq-umi"
path = "src/main.rs"

[lib]
name = "rsomics_fastq_umi"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-fqgz = { version = "0.1" }
rsomics-seqio = { version = "0.1" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
libdeflater = "1"

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support", "rayon"] }
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fastq_umi"
harness = false

